[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/fire_ball_test/fire_ball_test_2.png" type="Texture" id=1]
[ext_resource path="res://Scripts/fire_ball.gd" type="Script" id=2]
[ext_resource path="res://Sprites/fire_ball_test/fire_ball_coliision_2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/fire_ball_test/fire_ball_coliision_1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/fire_ball_test/fire_ball_coliision_3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/fire_ball_test/fire_ball_coliision_4.png" type="Texture" id=6]
[ext_resource path="res://audio/weapon sound/laser gun/laser_gun_shoot.wav" type="AudioStream" id=7]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 9 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "collision_explision",
"speed": 10.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "fire",
"speed": 5.0
} ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.442424, 0.739394, 1 )
colors = PoolColorArray( 0.96875, 0.0302734, 0.0302734, 1, 0.921873, 0.949219, 0.0741577, 1, 1, 1, 1, 1, 0.675781, 0.675781, 0.675781, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 15.0
gravity = Vector3( -1, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
scale_random = 1.0
color_ramp = SubResource( 4 )

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.393939, 0.563636, 0.739394 )
colors = PoolColorArray( 0.978516, 0.0344009, 0.0344009, 1, 0.947266, 0.901041, 0.0370026, 1, 0.619141, 0.607048, 0.607048, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 100, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
scale_random = 1.0
color_ramp = SubResource( 7 )

[node name="fire_ball" type="Area2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )
animation = "fire"

[node name="Trail" type="Particles2D" parent="."]
position = Vector2( 12.2573, 0.167515 )
amount = 50
local_coords = false
process_material = SubResource( 5 )

[node name="Explosion" type="Particles2D" parent="."]
emitting = false
amount = 30
lifetime = 0.35
one_shot = true
speed_scale = 1.5
process_material = SubResource( 8 )

[node name="laser_shoot_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
[connection signal="body_entered" from="." to="." method="_on_fire_ball_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="out_of_screen"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
